--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ h2 {
     font-family: 'Sarabun', sans-serif;
     font-weight: 600; 
     font-size: 40pt;
+    text-align: center;
 }
 
 h3 {
@@ -60,9 +61,14 @@ ul {
 
 .center {
     display: block;
+    width: 200px;
+    padding-top: 0px;
+    padding-bottom: 40px;
+  }
+
+#proj-descr {
+    text-align: left;
+    padding-top: 20px;
     margin-left: auto;
     margin-right: auto;
-    width: 60%;
-    padding-top: 0px;
-    padding-bottom: 20px;
-  }
+}
