--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,7 @@ ul {
 
 #description {
     padding-top: 0px;
+    background-color: aliceblue;
 }
 
 .center {
@@ -67,8 +68,24 @@ ul {
   }
 
 #proj-descr {
-    text-align: left;
     padding-top: 20px;
     margin-left: auto;
     margin-right: auto;
+}
+
+#proj-descr-text {
+    font-size: 16px;
+    font-weight: 200;
+}
+
+@media (min-width:768px) {
+    #proj-descr-text {
+        font-size: 20px;
+    }
+}
+
+@media (min-width:992px) {
+    #proj-descr-text {
+        font-size: 24px;
+    }
 }
